<resources>
    <string name="app_name">Calculator</string>
    <string name="_28_8">28–8</string>
    <string name="_20">20</string>
    <string name="c">C</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="one">/</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="pluss">+</string>
    <string name="_0">0</string>
    <string name="decimal">.</string>
    <string name="ac">AC</string>
    <string name="mod">%</string>
    <string name="_48_8">48–8</string>
    <string name="_40">400</string>
    <string name="equal_to">=</string>
    <string name="all_clear">All clear</string>
    <string name="error_message">ERROR</string>
    <string name="decimal_with_zero">0.</string>
</resources>